--- a/ui/aruni/aruni.css
+++ b/ui/aruni/aruni.css
@@ -175,6 +175,7 @@ a img { border: 0; }
 #tabs a#tab_to_pdf span { background-image: url(../images/Pdf16.png); }
 #tabs a#tab_help span { background-image: url(../images/help16.png); }
 #tabs a#tab_search span { background-image: url(../images/button_search.png); }
+#tabs a#tab_backlinks span { background-image: url(../images/button_rename.png); }
 
 
 /**************************************************************************
