--- a/ui/aruni/aruni.css
+++ b/ui/aruni/aruni.css
@@ -127,7 +127,7 @@ a img { border: 0; }
 
 #tabs .menu a span,
 #tabs .submenu a span {
-  background-position: left top;
+  background-position: left center;
   background-repeat: no-repeat;
   padding: 4px 0em 4px 19px;
 }
