--- a/ui/tiny_mce/content.css
+++ b/ui/tiny_mce/content.css
@@ -1,51 +1,10 @@
-body {
-	background-color: #FFFFFF;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	scrollbar-3dlight-color: #F0F0EE;
-	scrollbar-arrow-color: #676662;
-	scrollbar-base-color: #F0F0EE;
-	scrollbar-darkshadow-color: #DDDDDD;
-	scrollbar-face-color: #E0E0DD;
-	scrollbar-highlight-color: #F0F0EE;
-	scrollbar-shadow-color: #F0F0EE;
-	scrollbar-track-color: #F5F5F5;
+body, td {
+  font-size: 90% !important; /* already include inside aruni css */
+  font-family: "Arial", "DejaVu Sans", sans-serif !important;
 }
 
-td {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
-}
+a { color: #3465a4; }
+a img { border: 0; }
 
-pre {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 10px;
-}
-
-.example1 {
-	font-weight: bold;
-	font-size: 14px
-}
-
-.example2 {
-	font-weight: bold;
-	font-size: 12px;
-	color: #FF0000
-}
-
-.tablerow1 {
-	background-color: #BBBBBB;
-}
-
-thead {
-	background-color: #FFBBBB;
-}
-
-tfoot {
-	background-color: #BBBBFF;
-}
-
-th {
-	font-family: Verdana, Arial, Helvetica, sans-serif;
-	font-size: 13px;
-}
+ol li { list-style-type: decimal; }
+ul li { list-style-type: square; }
