--- a/ui/ical/calendar.css
+++ b/ui/ical/calendar.css
@@ -135,6 +135,7 @@ table.timetable {
 #cal_monthly_view table.event, 
 #cal_weekly_view #full_day_events table.event {
  border-collapse: collapse;
+ width: 100%;
 }
 
 #cal_monthly_view table.event td, 
