--- a/ui/ical/calendar.css
+++ b/ui/ical/calendar.css
@@ -1,40 +1,45 @@
 
 /* Selector */
 
-#cal_monthly_view #selector, #cal_weekly_view #selector {
+#cal_monthly_view #selector, #cal_weekly_view #selector,
+#cal_daily_view #selector {
   margin: 5px 0px 5px 0px;
   font-size:18px;
 }
-#cal_monthly_view #selector ul , #cal_weekly_view #selector ul {
+#cal_monthly_view #selector ul, #cal_weekly_view #selector ul,
+#cal_daily_view #selector ul {
   list-style:none;
   display:inline;
 }
-#cal_monthly_view #selector li , #cal_weekly_view #selector li {
-  display: inline; 
+#cal_monthly_view #selector li, #cal_weekly_view #selector li,
+#cal_daily_view #selector li {
+  display: inline;
   padding: 26px;
 }
-#cal_monthly_view #selector li a , #cal_weekly_view #selector li a {
+#cal_monthly_view #selector li a, #cal_weekly_view #selector li a,
+#cal_daily_view #selector li a {
   text-decoration:none;
   color: #cc0000;
 }
 
 /* ******** */
 
-#cal_monthly_view table , #cal_weekly_view table {
+#cal_monthly_view table, #cal_weekly_view table, #cal_daily_view table {
   border-spacing: 1px;
 }
-#cal_monthly_view td , #cal_weekly_view td {
+#cal_monthly_view td, #cal_weekly_view td, #cal_daily_view td {
   background: #e9b96e;
 }
 
-#cal_monthly_view .cal_today, #cal_weekly_view .cal_today {
+#cal_monthly_view .cal_today, #cal_weekly_view .cal_today,
+#cal_daily_view .cal_today {
   margin-left: 2px;
   color: #3465a4;
   font-size: 12px;
   font-style: italic;
 }
 
-#cal_monthly_view th , #cal_weekly_view th {
+#cal_monthly_view th, #cal_weekly_view th, #cal_daily_view th {
   background: #cc0000;
   color: #fce94f;
   font-weight: bold;
@@ -58,17 +63,16 @@
   padding: 2px 2px 0 3px;
 }
 
-#cal_monthly_view .day, 
+#cal_monthly_view .day,
 #cal_weekly_view .day {
   height: 70px;
-} 
+}
 
 #cal_monthly_view .bold {
   font-weight: bold;
 }
 
-#cal_monthly_view .cal_day_selected,
-#cal_weekly_view .cal_day_selected {
+#cal_monthly_view .cal_day_selected, #cal_weekly_view .cal_day_selected {
   color: #cc0000;
   background: #fce94f;
 }
@@ -78,15 +82,15 @@
   font-weight: bold;
 }
 
-#cal_monthly_view .add_event , #cal_weekly_view .add_event {
+#cal_monthly_view .add_event, #cal_weekly_view .add_event,
+#cal_daily_view .add_event {
   color: #ce5c00;
-  text-decoration:none; 
-  font-size:11px; 
+  text-decoration:none;
+  font-size:11px;
   vertical-align: top;
 }
 
-#cal_monthly_view .add_event img,
-#cal_weekly_view .add_event img {
+#cal_monthly_view .add_event img, #cal_weekly_view .add_event img {
   vertical-align: bottom;
 }
 
@@ -95,25 +99,25 @@
   margin-left: 5px;
 }
 
-#cal_monthly_view .event .CONFIRMED, 
-#cal_monthly_view .CONFIRMED a, 
+#cal_monthly_view .event .CONFIRMED,
+#cal_monthly_view .CONFIRMED a,
 #cal_weekly_view .CONFIRMED {
   text-decoration: none;
   color: #4a0000;
 }
-#cal_monthly_view .event .TENTATIVE, 
-#cal_monthly_view .TENTATIVE a, 
+#cal_monthly_view .event .TENTATIVE,
+#cal_monthly_view .TENTATIVE a,
 #cal_weekly_view .TENTATIVE {
   text-decoration: none;
   color: #cc0000;
 }
-#cal_monthly_view .event .CANCELLED, 
-#cal_monthly_view .event .CANCELLED a, 
+#cal_monthly_view .event .CANCELLED,
+#cal_monthly_view .event .CANCELLED a,
 #cal_weekly_view .CANCELLED {
   color: #8f5902;
 }
-#cal_monthly_view .event .CANCELLED, 
-#cal_monthly_view .event .CANCELLED a, 
+#cal_monthly_view .event .CANCELLED,
+#cal_monthly_view .event .CANCELLED a,
 #cal_weekly_view .CANCELLED {
   text-decoration: line-through;
 }
@@ -132,12 +136,12 @@ table.timetable {
 
 /* COLORS for events background */
 
-#cal_monthly_view table.event, 
+#cal_monthly_view table.event,
 #cal_weekly_view #full_day_events table.event {
  border-collapse: collapse;
 }
 
-#cal_monthly_view table.event td, 
+#cal_monthly_view table.event td,
 #cal_weekly_view #full_day_events table.event td {
  border-top: 1px solid white;
  border-bottom: 1px solid white;
@@ -151,7 +155,7 @@ table.timetable {
 
 #cal_monthly_view .event .color0 td,
 #cal_weekly_view td.color0 {
- background-color: #BCA1A1; 
+ background-color: #BCA1A1;
 }
 
 #cal_monthly_view .event .color1 td,
@@ -177,56 +181,60 @@ table.timetable {
 
 /* daily_view */
 
-.cal_busy {
+#cal_daily_view .cal_busy {
   background: #729fcf;
 }
-.cal_conflict {
+#cal_daily_view .cal_conflict {
   background: #ef2929;
 }
+#cal_daily_view .cal_busy a,
+#cal_daily_view .cal_conflict a {
+  color: #fff;
+}
 
-#daily_view #attributes {
+#cal_daily_view #attributes {
   margin: 5px 0 8px 0;
 }
 
-#daily_view #attributes span {
+#cal_daily_view #attributes span {
   margin: 0 8px 0 0;
 }
 
-#daily_view .evt_value, 
-#daily_view .add_event {
+#cal_daily_view .evt_value,
+#cal_daily_view .add_event {
   font-size: 12px;
   text-decoration: none;
   color: #003180;
 }
 
-#daily_view table {
+#cal_daily_view table {
   border-collapse: collapse;
 }
-#daily_view td {
+#cal_daily_view td {
   border: 1px solid black;
 }
 
-#daily_view .header_columns {
+#cal_daily_view .header_columns {
   font-size: 9px;
   font-weight: bold;
 }
 
-#daily_view #header_columns {
+#cal_daily_view #header_columns {
   border-top: 1.5px solid black;
 }
 
-#daily_view #header_columns td {
+#cal_daily_view #header_columns td {
   padding: 6px;
 }
 
-#daily_view #header_timetables,
-#daily_view #header_timetables table, 
-#daily_view #header_timetables tr, 
-#daily_view #header_timetables td {
+#cal_daily_view #header_timetables,
+#cal_daily_view #header_timetables table,
+#cal_daily_view #header_timetables tr,
+#cal_daily_view #header_timetables td {
   border: none;
 }
 
-#daily_view #header_timetables span {
+#cal_daily_view #header_timetables span {
   margin-left: -15px; /* See below */
   font-size: 9px;
   font-weight: bold;
@@ -234,7 +242,7 @@ table.timetable {
 }
 
 /* Prevent IE from eating the time outside the box */
-* html #daily_view #header_timetables span {
+* html #cal_daily_view #header_timetables span {
   margin-left: 0;
 }
 
