--- a/ui/aruni/aruni.css
+++ b/ui/aruni/aruni.css
@@ -109,65 +109,7 @@ legend {
 }
 
 #right {
-  font-size: 1.0em;
-  padding-left: 8px;
   width: 210px;
-}
-
-#right a, #right a:link, #right a:visited, #right a:hover, #right a:active {
-  text-decoration: none;
-  color: #3465a4;
-}
-
-#right label {
-  display: block;
-  width: 205px;
-  margin: 3px;
-  padding: 3px 6px;
-  color: #fff;
-  background: #c17d11;
-}
-
-#right ul,
-#right dl {
-  margin: 3px 6px 10px 3px;
-}
-
-#right ul {
-  list-style: none;
-}
-
-#right li {
-  margin: 3px;
-  padding: 0;
-  background-repeat: no-repeat;
-  background-position: top left;
-  line-height: 1.6em;
-  list-style: none;
-}
-
-#right li a {
-  padding-left: 20px;
-}
-
-#right dl {
-  padding: 3px;
-}
-
-#right dl dl {
-  margin: 0;
-  border: 0;
-  padding: 0;
-}
-
-#right dt {
-  overflow: hidden;
-  line-height: 1.6em;
-  border-bottom: 1px solid #d3d7cf;
-}
-
-#right dd {
-  margin-left: 9px;
 }
 
 #footer {
@@ -187,6 +129,52 @@ legend {
 
 #footer a:hover {
   text-decoration: underline;
+}
+
+
+/**************************************************************************
+ * ui/generic/menu.xml.en
+ *************************************************************************/
+
+.context_menu {
+  font-size: 1.0em;
+  padding-left: 8px;
+}
+
+.context_menu a,
+.context_menu a:link,
+.context_menu a:visited,
+.context_menu a:hover,
+.context_menu a:active {
+  text-decoration: none;
+  color: #3465a4;
+}
+
+.context_menu label {
+  display: block;
+  width: 205px;
+  margin: 3px;
+  padding: 3px 6px;
+  color: #fff;
+  background: #c17d11;
+}
+
+.context_menu ul {
+  margin: 3px 6px 10px 3px;
+  list-style: none;
+  padding: 3px;
+}
+
+.context_menu li {
+  margin: 3px;
+  padding: 0;
+  background-repeat: no-repeat;
+  background-position: top left;
+  line-height: 1.6em;
+  list-style: none;
+  overflow: hidden;
+  line-height: 1.6em;
+  border-bottom: 1px solid #d3d7cf;
 }
 
 
