--- a/ui/aruni/aruni.css
+++ b/ui/aruni/aruni.css
@@ -101,7 +101,7 @@ legend {
 }
 
 #header a#top_menu_search {
-  background-image: url(../icons/16x16/button_search.png);
+  background-image: url(../icons/16x16/search.png);
 }
 
 #header a#top_menu_contact {
@@ -189,7 +189,7 @@ legend {
   margin: 3px;
   padding: 3px 0 3px 24px;
   border: 2px solid #000;
-  background: #fcaf3e url(../images/message.png) left center no-repeat;
+  background: #fcaf3e url(../icons/16x16/message.png) left center no-repeat;
 }
 
 #body {
@@ -377,19 +377,19 @@ table.new_resource_thumb {
  *************************************************************************/
 
 th a.sort_up {
-  background: transparent url(images/order-up.png) right top no-repeat;
+  background: transparent url(../icons/16x16/up.png) right top no-repeat;
   padding-right: 20px;
   text-decoration: none;
 }
 
 th a.sort_down {
-  background: transparent url(images/order-down.png) right top no-repeat;
+  background: transparent url(../icons/16x16/down.png) right top no-repeat;
   padding-right: 20px;
   text-decoration: none;
 }
 
 th a.sort_none {
-  background: transparent url(images/order-none.png) right top no-repeat;
+  background: transparent url(../icons/16x16/none.png) right top no-repeat;
   padding-right: 20px;
   text-decoration: none;
 }
@@ -430,52 +430,52 @@ th a.sort_none {
 }
 
 .button_ok {
-  padding-left: 16px; background-image: url(../images/button_ok.png);
+  padding-left: 16px; background-image: url(../icons/16x16/ok.png);
 }
 
 .button_cancel {
-  padding-left: 16px; background-image: url(../images/button_cancel.png);
+  padding-left: 16px; background-image: url(../icons/16x16/cancel.png);
 }
 
 .button_search {
-  background-image: url(../icons/16x16/button_search.png);
+  background-image: url(../icons/16x16/search.png);
   padding-left: 16px;
 }
 
 .button_calendar {
-  background-image: url(../icons/16x16/button_calendar.png);
+  background-image: url(../icons/16x16/calendar.png);
   padding-left: 16px;
 }
 
 .button_upload {
-  background-image: url(../icons/16x16/button_upload.png);
+  background-image: url(../icons/16x16/upload.png);
   padding-left: 16px;
 }
 
 .button_external {
-  background-image: url(../icons/16x16/button_external.png);
+  background-image: url(../icons/16x16/external.png);
   padding-left: 16px;
 }
 
 .button_rename {
-  background-image: url(../icons/16x16/button_rename.png);
+  background-image: url(../icons/16x16/rename.png);
   padding-left: 16px;
 }
 
 .button_delete {
-  padding-left: 16px; background-image: url(../images/button_delete.png);
+  padding-left: 16px; background-image: url(../icons/16x16/delete.png);
 }
 
 .button_copy {
-  padding-left: 16px; background-image: url(../images/button_copy.png);
+  padding-left: 16px; background-image: url(../icons/16x16/copy.png);
 }
 
 .button_cut {
-  padding-left: 16px; background-image: url(../images/button_cut.png);
+  padding-left: 16px; background-image: url(../icons/16x16/cut.png);
 }
 
 .button_paste {
-  padding-left: 16px; background-image: url(../images/button_paste.png);
+  padding-left: 16px; background-image: url(../icons/16x16/paste.png);
 }
 
 .button_translate {
@@ -484,20 +484,20 @@ th a.sort_none {
 }
 
 .button_compare {
-  background-image: url(../icons/16x16/button_compare.png);
+  background-image: url(../icons/16x16/compare.png);
   padding-left: 16px;
 }
 
 .button_add {
-  padding-left: 16px; background-image: url(../images/button_add.png);
+  padding-left: 16px; background-image: url(../icons/16x16/add.png);
 }
 
 .button_select_all {
-  padding-left: 16px; background-image: url(../images/button_select_all.png);
+  padding-left: 16px; background-image: url(../icons/16x16/select_all.png);
 }
 
 .button_select_none {
-  padding-left: 16px; background-image: url(../images/button_select_none.png);
+  padding-left: 16px; background-image: url(../icons/16x16/select_none.png);
 }
 
 
